--- a/src/App.scss
+++ b/src/App.scss
@@ -79,6 +79,11 @@ body {
   letter-spacing: 6.86px;
 }
 
+.st-detail_container {
+  margin: 0 auto;
+  width: 1000px;
+}
+
 .st-list_container {
   // display: flex;
   // justify-content: space-around;
