--- a/src/App.scss
+++ b/src/App.scss
@@ -119,6 +119,10 @@ body {
   }
   .st-list_desc {
     background-color: rgba(255, 243, 247, 0.96);
+    // background-color: rgba(223,231,245,.96);
+  }
+  .st-list_desc_m {
+      background-color: rgba(223,231,245,.96);
   }
   .st-list_desc {
     padding: 20px 0;
@@ -138,6 +142,13 @@ body {
       letter-spacing: 2px;
       color: #000;
       text-align: center;
+      font-family: -apple-system, BlinkMacSystemFont, YakuHanJP, 游ゴシック体,
+        YuGothic, "Yu Gothic M", "游ゴシック Medium", "Yu Gothic Medium",
+        "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN W3", HiraKakuProN-W3,
+        "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro",
+        "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, Osaka, "ＭＳ Ｐゴシック",
+        "MS PGothic", "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
+        "Segoe UI", sans-serif;
     }
   }
   .st-list_name {
